--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1033,7 +1033,7 @@ nav {
 
 .timeline-home { display: flex;position: relative;z-index: 2;}
 
-.timeline-center { flex-grow: .9;justify-items: center;}
+.timeline-center { flex-grow: .8;justify-items: center;}
 
 .box-box {
 
@@ -2252,6 +2252,7 @@ html { box-sizing: border-box;-webkit-font-smoothing: antialiased;}
 }
 
 .cardCategoryTitle figure { width: 100%; margin: 0;}
+.cardCategoryTitle img {object-fit: cover;object-position: center;}
 
 .cardCategoryTitle p {
 
