--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1607,7 +1607,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 .btnCategorie:hover {
 
     cursor: pointer;
-    background: #011A46;
+    background: rgb(3, 25, 216);
 
 
 }
@@ -1620,6 +1620,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
     display: flex;
     flex-wrap: wrap;
     padding-top: 1em;
+    font-family: "Inter", sans-serif;
 
 }
 
@@ -1689,7 +1690,8 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
     display: flex;
     gap: 120px;
     color: #676767;
-    font-weight: 500;
+    font-weight: 550;
+    
     margin-top: .5em;
 
 }
@@ -1716,7 +1718,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
     width: 100%;
     height: 80px;
     color: #676767;
-    font-weight: 500;
+    font-weight: 550;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -1732,6 +1734,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
     font-weight: 700;
     font-size: 1em;
     color: #151C27;
+    
 
 }
 
@@ -1739,7 +1742,6 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 
     display: flex;
     align-items: center;
-    justify-content: space-between;
     height: 70px;
     gap: 10px;
     
@@ -1749,7 +1751,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 .title_last_topic { height: 20px;}
 
 /***************************************************************** TOPICS **************************************************************************/
-.cardTopicContent{ margin: 1em 0;}
+.cardTopicContent{ margin: 1em 0;font-family: "Inter", sans-serif;}
 
 .cardTopic {
 
@@ -1805,7 +1807,35 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 
 }
 
-.cantainer-topic{ width: 100%;}
+.container-topic{ width: 100%;font-family: "Inter", sans-serif;color: #151C27;}
+
+#recap{}
+
+#category{width: 100%;border-bottom: 1px solid #BEBEBE;}
+
+#title-category th{ color: #676767;font-size: 1.1em;font-weight: 600; }
+
+#title-topic{width: 40%;}
+
+#title-user{width: 25%; text-align: center;}
+
+#title-reply{width: 25%;text-align: center;}
+
+#title-view{width: 10%;text-align: center;}
+
+#product-hover{border-bottom: 1px solid #BEBEBE;}
+
+#product-hover:hover{background-color: #74d4fd45;cursor: pointer;}
+
+#topic{font-weight: 600;align-content: center;}
+
+.user-topic{justify-content: center;display: flex;align-items: center;gap: 10px;}
+
+.user-topic p{margin: 0;}
+
+.user-topic a:hover {color: #151C27;scale: 1.12;transition: .3s;}
+
+.info-topic{text-align: center;}
 
 /***************************************************************** POST **************************************************************************/
 .post_container{
