--- a/public/css/style.css
+++ b/public/css/style.css
@@ -765,7 +765,7 @@ form.formulaire2 {
     width: 100%;
     position: sticky;
     top: 0;
-    z-index: 0;
+    z-index: 1;
     background: linear-gradient(90deg, rgba(116, 212, 253, 1) 0%, rgba(10, 77, 193, 1) 100%);
     padding: 1em 2em;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, .1);
@@ -1249,7 +1249,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 
 /***************************************************************** EVENTS *********************************************************************/
 
-.main-container-event {width: 75%;flex-grow: 1;overflow: auto;background-color: var(--base);height: 100vh;font-family: "Inter", sans-serif}
+.main-container-event {width: 75%;flex-grow: 1;background-color: var(--base);height: 100vh;font-family: "Inter", sans-serif}
 
 .left-side-content {width: 21%;}
 
@@ -1277,7 +1277,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 
 .uk-pagination li a {padding: 5px 10px;margin: 0 5px;color: #151C27;}
 
-.status-event{ display: flex;flex-wrap: wrap; margin: 15px 0;width: 100%;gap: 18px;}
+.status-event{ display: flex;flex-wrap: wrap; margin: 15px 0;width: 100%;gap: 15px;}
 
 .status-content{height: 350px;background-color: rgba(255, 255, 255, 0.782);border-radius: 15px;width: 24%;box-shadow: 0px 7px 7px rgba(0, 0, 0, .1);}
 
@@ -1597,11 +1597,20 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 /***************************************************************** CATEGORY **************************************************************************/
 
 /*********** CATEGORIE TITLE ***********/
+
+.pageCategorie{
+    background: var(--base);
+    width: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+    
+}
+
 .categoryContent {
 
     width: 100%;
-    min-height: 90vh;
     padding: 2em 5em;
+    
 
 }
 
@@ -1612,6 +1621,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 
 
 
@@ -1723,7 +1733,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
     border-radius: 30px;
     position: relative;
     gap: 30px;
-    margin: 1em 2.9em;
+    margin: 1em 2.5em;
     padding: 2.5em 2em 0 2em;
 
 }
