--- a/public/css/style.css
+++ b/public/css/style.css
@@ -955,6 +955,10 @@ nav {
     margin: 0 auto;
 }
 
+/***************************************************************** ALERT **************************************************************************/
+
+.alert{position: absolute;height: 50px;width: 20.8%;}
+
 /***************************************************************** NAV **************************************************************************/
 
 /*********** Nav Menu ***********/
@@ -979,7 +983,7 @@ nav {
 
 }
 
-.side-wrapper-home { padding: 30px 30px 17px 30px;}
+.side-wrapper-home { padding: 40px 30px 17px 30px;}
 
 .side-wrapper-home:hover { border-right: 5px solid #d0d0d0ae;}
 
@@ -1261,7 +1265,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 
 .listNavEvent {height: 88vh;display: flex;flex-direction: column;justify-content: space-between;}
 
-.navEvent{width: 108.7%; display: flex;flex-direction: column;gap: 20px;}
+.navEvent{width: 108.7%; display: flex;flex-direction: column;gap: 20px; margin-top: 1em;}
 
 .navEvent h2{padding-left: .3em;height: 30px;}
 
