--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,18 +81,27 @@ body {
 /********************************* Grid Left ***************************/
 
 .left {
-    width: 55%;
+    width: 50%;
+    
 }
 
-.left-logo img {
+.left-logo  {
     width: 100%;
+    height: 100%;
+    text-align: center;
+    align-content: center;
+    
+}
+.left-logo img {
+    width: 50%;
+    
 }
 
 /******************************** Grid Right *************************/
 
 .right {
 
-    width: 30%;
+    width: 40%;
     margin: 2em 0;
     position: relative;
 
@@ -135,8 +144,6 @@ body {
     text-align: left;
 
 }
-
-
 
 .titleInscription h3 {
 
